WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83506
[Mac] WebProcess dies due to m_process->checkURLReceivedFromWebProcess(url) dropping a file URL
https://bugs.webkit.org/show_bug.cgi?id=83506
Summary
[Mac] WebProcess dies due to m_process->checkURLReceivedFromWebProcess(url) d...
Alexey Proskuryakov
Reported
2012-04-09 13:59:03 PDT
Steps to reproduce. 1. Launch installed Safari alongside a local build or a nightly. 2. Open any local document in installed Safari. 3. Drag favicon from installed Safari's address bar to another copy's content window. Results: assertion failure. <
rdar://problem/11171264
>
Attachments
proposed fix
(3.17 KB, patch)
2012-04-09 14:30 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-04-09 14:30:01 PDT
Created
attachment 136305
[details]
proposed fix
WebKit Review Bot
Comment 2
2012-04-09 19:06:36 PDT
Comment on
attachment 136305
[details]
proposed fix Clearing flags on attachment: 136305 Committed
r113659
: <
http://trac.webkit.org/changeset/113659
>
WebKit Review Bot
Comment 3
2012-04-09 19:06:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug